  - More fixes to cms_url class.
  - Numerous minor optimizations
  - Add the ability to content types the ability to set basic attributes for properties from within the page type definition.
  - Fixes problems with pagelink and link content types not being properly editable by additional editors.

Navigator v1.0.4
  - Minor optimizations

Installation Assistant v1.2.1
  - Only create dummy index.html files in subdirectories we created.
  - Clear cache after step 9.

CmsJobManager
  - New core module to handle queued asynchronous tasks.

Content Manager
  - Minor tweak to bulk delete pages.
  - Minor fix to the active tab when changing a template or design.
  - Now listen to the 'default parent page' user preference.
  - Fix minor XSS problem in the Admin if some loser puts JavaScript into the title field or alias field or menu text field.
  - Now allow filtering pages by owner, editor, template, or design.  Only for admins with Modify any page, or Manage all content permissions.
  - Fix problems with auto-refresh being too fast for some operations
  - Now auto scroll to the first matched page in a find.
  - Additional editors of a page cannot change the content type.  Only owners, or users with the Manage all Content permissions.

DesignManager
  - Move the designs tab of the main interface into third position.
  - Implement sorting in edit design.
  - Remove option menus (for now) from templates, stylesheets, and designs tab.
  - Modify the template list functionality in edit-design to allow using keyboard control. Space or + to select an item on the left, and right arrow to move.
  - Modify the edit-design functionality to allow clicking on an attached template or stylesheet to edit it.
  - Generic templates now display a usage string.
  - When creating a new template, associate the new template with the default design.
  - Add reset buttons to the filter forms.
  - No longer check for default content block in a template.

News v2.50.6